--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -270,10 +270,42 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" id="SgM-vT-YNs">
-                                <rect key="frame" x="18" y="-79" width="375" height="812"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="t3t-B5-GcF">
+                                        <rect key="frame" x="16" y="112" width="343" height="78"/>
+                                        <subviews>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Título" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CSh-nu-0eQ">
+                                                <rect key="frame" x="0.0" y="0.0" width="343" height="34"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="q9j-VM-yXu">
+                                                <rect key="frame" x="0.0" y="44" width="343" height="34"/>
+                                                <subviews>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Nota" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cQH-Y3-yxO">
+                                                        <rect key="frame" x="0.0" y="0.0" width="166.66666666666666" height="34"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <textInputTraits key="textInputTraits"/>
+                                                    </textField>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Duração" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FNB-BO-daS">
+                                                        <rect key="frame" x="176.66666666666663" y="0.0" width="166.33333333333337" height="34"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <textInputTraits key="textInputTraits"/>
+                                                    </textField>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
                                 <viewLayoutGuide key="safeArea" id="qjT-I6-ztd"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="t3t-B5-GcF" firstAttribute="leading" secondItem="qjT-I6-ztd" secondAttribute="leading" constant="16" id="3rU-RW-ZK9"/>
+                                    <constraint firstItem="t3t-B5-GcF" firstAttribute="top" secondItem="qjT-I6-ztd" secondAttribute="top" constant="24" id="U0Z-UT-Bo2"/>
+                                    <constraint firstItem="qjT-I6-ztd" firstAttribute="trailing" secondItem="t3t-B5-GcF" secondAttribute="trailing" constant="16" id="Xg4-y0-daT"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="972-Lc-GsG"/>
@@ -283,7 +315,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LWa-Zi-U09" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="982" y="-157"/>
+            <point key="canvasLocation" x="981.60000000000002" y="-157.38916256157637"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="jaB-bw-27h">
